--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 /*  <html> holds the general background */
 html {
   font-family: 'Helvetica Neue';
-  background: url(background.jpg);
+  background: url(rc/background.jpg);
 }
 
 body {
