--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body {
 }
 #dHomeDropZone {
   -webkit-flex-grow: 1;
-  margin: 30px 30px 15px 30px;
+  margin: 30px;
   display: -webkit-flex;
   -webkit-flex-direction: column;
   -webkit-justify-content: center;
@@ -118,11 +118,6 @@ body {
   padding: 0;
   margin: 0;
   margin-bottom: 30px;
-}
-#dHomeLanguage {
-  padding: 0 30px 15px 30px;
-  font-size: 0.6em;
-  text-align: right;
 }
 
 /*  audio interface appear on the center of the screen
