--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 /*  <html> holds the general background */
 html {
   font-family: 'Helvetica Neue';
-  background: rgba(0, 0, 0, 0.8);
+  background: rgb(38,38,38);
 }
 
 body {
@@ -30,8 +30,6 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-
-  color: white;
 }
 
 /*  input[file] is there only to provide a file dialog
